K8s/kubernetes-services-demo/k8s-manifests/00-namespace.yaml
# Namespace for the demo
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-services-demo
  labels:
    name: k8s-services-demo
